--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -24,8 +24,7 @@
                 "input": "public"
               },
               "src/favicon.ico",
-              "src/assets",
-              "src/_redirects"
+              "src/assets"
             ],
             "styles": [
               "src/styles.css"
