--- a/backend/IoTCarBackend/appsettings.json
+++ b/backend/IoTCarBackend/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Cors": {
+    "AllowedOrigins": [
+      "https://iotcarc.netlify.app",
+      "http://localhost:4200"
+    ]
+  },
   "AllowedHosts": "*"
 }
